# terminusgps-site

./: '  .dockerignore  .gitignore  .prettierrc.yaml  Dockerfile  README.md  db.sqlite3  manage.py  output.csv  package-lock.json  package.json  pyproject.toml  requirements.txt  results.csv  tailwind.config.js  term.lua  terminusgps-site.conf
.github/workflows/: django-test.yaml  docker-build.yaml
blog/: urls.py  views.py
dforms/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
dforms/migrations/: 0001_initial.py  0002_newslettersignupsubmission_and_more.py  0003_alter_newslettersignupsubmission_date_submitted_and_more.py
dforms/wialon/: __init__.py  session.py  validators.py
docs/source/: conf.py  index.rst
ecom/: admin.py  forms.py  models.py  package-lock.json  tailwind.config.js  urls.py  views.py
ecom/api/: product.py
ecom/migrations/: 0001_initial.py  0002_user_rename_product_id_product_id_order.py  0003_rename_name_user_first_name_user_last_name_and_more.py  0004_product_img.py
ecom/squareapi/: __init__.py  payments.py  session.py
global_static/css/: main.css
global_static/js/: accordion.js  main.js
manager/: admin.py  constants.py  decorators.py  models.py  urls.py  views.py  wialon.py
manager/migrations/: 0001_initial.py
manager/tests/: test_views.py
output/: geofences-2024-08-29-00-16-33.csv  geofences-2024-08-29-01-14.csv  geofences-2024-08-29-01-16-55.csv  geofences-2024-08-29-02-16-48.csv  geofences-2024-08-29-03-16-18.csv  geofences-2024-08-29-11-14.csv  geofences-2024-08-29-37-14-58.csv  geofences-2024-08-29-41-14-33.csv  geofences-2024-08-29-52-15-37.csv  geofences-2024-08-29-54-15-13.csv  geofences-2024-08-29-58-15-37.csv  geofences-2024-08-30-00-12-50.csv  geofences-2024-08-30-05-11-24.csv  geofences-2024-08-30-05-13-28.csv  geofences-2024-08-30-06-11-43.csv  geofences-2024-08-30-08-11-08.csv  geofences-2024-08-30-08-11-28.csv  geofences-2024-08-30-09-11-59.csv  geofences-2024-08-30-11-11-21.csv  geofences-2024-08-30-15-11-20.csv  geofences-2024-08-30-17-14-32.csv  geofences-2024-08-30-20-12-05.csv  geofences-2024-08-30-21-11-43.csv  geofences-2024-08-30-38-11-16.csv  geofences-2024-08-30-59-11-04.csv
payments/: admin.py  models.py  tests.py  urls.py  views.py
payments/models/: __init__.py
payments/quickbooks/: auth.py
profiles/: admin.py  authorizenet.py  models.py  views.py  wialon.py
profiles/migrations/: 0001_initial.py  0002_terminusprofile_delete_customerprofile.py
scripts/: runtailwind.sh
src/: asgi.py  celery.py  emails.py  forms.py  generate_qr_code.py  services.py  tailwind.sh  tasks.py  urls.py  utils.py  validators.py  views.py  wsgi.py
src/settings/: dev.py  prod.py  test.py
src/templates/: 403.html  404.html
src/views/: __init__.py  auth.py  public.py
static/js/: register.js
terminusgps/: asgi.py  auth.py  aws.py  constants.py  decorators.py  forms.py  logging_config.py  renderer.py  settings.py  urls.py  views.py  wialon.py  wsgi.py
terminusgps/settings/: dev.py  prod.py  test.py
terminusgps_install/: admin.py  apps.py  forms.py  models.py  urls.py  validators.py  views.py
terminusgps_install/migrations/: 0001_initial.py  0002_wialonasset.py  0003_installer.py  0004_remove_installer_accounts_installer_accounts.py  0005_alter_installer_accounts.py
terminusgps_installer/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  validators.py  views.py
terminusgps_installer/migrations/: 0001_initial.py  0002_alter_installjob_vin.py  0002_delete_wialonasset.py  0002_wialonasset_icon.py  0002_wialonasset_vin_alter_wialonasset_imei.py  0003_alter_installjob_options_remove_wialonasset_icon_and_more.py  0003_remove_installer_accounts_installer_accounts.py  0003_remove_installjob_license_remove_installjob_mileage.py  0004_alter_installjob_status.py  0004_installjob_status.py  0005_alter_installjob_status.py  0006_remove_installjob_installer_alter_installjob_options_and_more.py  0006_remove_installjob_status_installjob_completed.py  0007_alter_installjob_imei_alter_installjob_vin_and_more.py  0007_wialonassetcommand_cmd_id_and_more.py  (+22 more)
terminusgps_manager/: admin.py  apps.py  authorizenet.py  constants.py  decorators.py  forms.py  models.py  tasks.py  urls.py  views.py  wialon.py
terminusgps_site/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
terminusgps_tracker/: admin.py  apps.py  decorators.py  emails.py  forms.py  http.py  managers.py  models.py  signals.py  tests.py  urls.py  utils.py  validators.py  views.py  widgets.py
tests/: test_models.py  test_validators.py  test_views.py  test_wialon.py
(+979 files in other folders)
