[project]
name = "terminusgps-site"
description = "Terminus GPS Website"
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.12"

authors = [
    { name = "Blake Nall", email = "blake@terminusgps.com" },
    { name = "Lili Noack", email = "lili@terminusgps.com" },
    { name = "Peter Speckman", email = "pspeckman@terminusgps.com" },
]
dependencies = [
    "authorizenet==1.1.5",
    "django-storages[s3]>=1.14.4",
    "django==5.2.2",
    "gunicorn>=23.0.0",
    "lxml==4.9.4",
    "numpy==2.0.1",
    "pandas==2.2.3",
    "pillow==11.3.0",
    "python-terminusgps==42.2.1",
    "python-wialon==1.2.4",
    "psycopg>=3.2.6",
    "psycopg2-binary>=2.9.10",
    "redis[hiredis]>=6.4.0",
]

[tool.pyright]
strictListInference = false
strictDictionaryInference = false
strictSetInference = false
typeCheckingMode = "basic"

[tool.ruff]
exclude = [
    ".git",
    ".gitignore",
    ".venv",
    "venv",
    ".vscode",
    "__pycache__",
    "node_modules",
    "site-packages",
    "dist",
    "build",
]
line-length = 79
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "DJ",
]
ignore = ["DJ001", "F821"]
fixable = [ "ALL" ]
unfixable = []
extend-per-file-ignores = {"*/migrations/*.py" = ["E501"]}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = false
skip-magic-trailing-comma = true

[dependency-groups]
dev = [
    "certifi>=2025.1.31",
    "django-debug-toolbar>=6.0.0",
    "django-stubs>=5.2.2",
    "django-stubs-ext>=5.2.2",
]
