[project]
name = "terminusgps-site"
description = "Terminus GPS Website"
readme = "README.md"
version = "3.0.0"
requires-python = ">=3.14"

authors = [
    { name = "Blake Nall", email = "blake@terminusgps.com" },
]
dependencies = [
    "django==6.0.6",
    "django-phonenumber-field[phonenumbers]>=8.4.0",
    "pillow==12.2.0",
    "python-wialon>=1.2.4",
]

[tool.pyright]
strictListInference = false
strictDictionaryInference = false
strictSetInference = false
typeCheckingMode = "basic"

[tool.ruff]
exclude = [
    ".git",
    ".gitignore",
    ".venv",
    "venv",
    ".vscode",
    "__pycache__",
    "node_modules",
    "site-packages",
    "dist",
    "build",
]
line-length = 79
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "DJ",
]
ignore = ["DJ001", "F821"]
fixable = [ "ALL" ]
unfixable = []
extend-per-file-ignores = {"*/migrations/*.py" = ["E501"]}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = false
skip-magic-trailing-comma = true

[dependency-groups]
deploy = [
    "django-storages[s3]>=1.14.4",
    "gunicorn>=23.0.0",
    "psycopg>=3.3.4",
    "psycopg2-binary>=2.9.10",
    "certifi>=2026.6.17",
    "django-redis>=7.0.0",
]
dev = [
    "ipython>=9.14.1",
]
